--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -1,6 +1,16 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:extrabold,bold,semibold,regular,light,');
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i&amp;subset=latin-ext');
 
+// hover and other unusual states just like btn-primary, but our light blue brand
+// color on standard state.
+.btn-brand-alt {
+  // color, bg, border
+  @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
+  color: $text-color;
+  background-color: $bg-lightly-highlight;
+  border-color: #ccc;
+}
+
 
 .chf-container-fluid {
   $sidebar-width: 235px;
