use btn-brand-alt for image thumb action buttons

--- a/app/views/curation_concerns/base/_show_page_image.html.erb
+++ b/app/views/curation_concerns/base/_show_page_image.html.erb
@@ -32,7 +32,7 @@
   <div class="show-page-image-bar">
     <% if (member.model_name.singular.to_sym == :file_set) && can?(:read, member.id) %>
       <div class="btn-group dropup">
-        <button type="button" class="btn btn-default dropdown-toggle" id="dropdownMenu_downloads_<%= member.id %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <button type="button" class="btn btn-brand-alt dropdown-toggle" id="dropdownMenu_downloads_<%= member.id %>" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           <%# less space for admin, just use icon %>
           <i class='fa fa-download'></i> Download
         </button>
@@ -42,7 +42,7 @@
 
     <% if local_assigns[:size].to_s == "large" %>
       <div class="btn-group">
-        <%= content_tag("button", type: "button", class: "btn btn-default dropdown-toggle", data: viewer_trigger_data_attributes(parent_id: @presenter.id, member: member)) do %>
+        <%= content_tag("button", type: "button", class: "btn btn-brand-alt dropdown-toggle", data: viewer_trigger_data_attributes(parent_id: @presenter.id, member: member)) do %>
           <i class='fa fa-search'></i> View
         <% end %>
       </div>
@@ -51,13 +51,13 @@
 
     <% if (member.model_name.singular.to_sym == :file_set) && current_ability.current_user.staff? %>
       <div class="btn-group dropup">
-        <button class="btn btn-default dropdown-toggle" data-toggle="dropdown" type="button" id="dropdownMenu_actions_<%= member.id %>" aria-haspopup="true">
+        <button class="btn btn-brand-alt dropdown-toggle" data-toggle="dropdown" type="button" id="dropdownMenu_actions_<%= member.id %>" aria-haspopup="true">
           <i class='fa fa-cog'></i>  Admin
         </button>
         <%= file_set_actions_menu(member, parent: @presenter, labelled_by: "dropdownMenu_actions_#{member.id}" ) %>
       </div>
     <% elsif member.model_name.singular.to_sym != :file_set %>
-      <%= link_to  contextual_path(member, @presenter), class: "btn btn-default show-page-image-info" do %>
+      <%= link_to  contextual_path(member, @presenter), class: "btn btn-brand-alt show-page-image-info" do %>
          Info
       <% end %>
     <% end %>
