variable name more accurate as to appropriate use

--- a/app/assets/stylesheets/local/_variables.scss
+++ b/app/assets/stylesheets/local/_variables.scss
@@ -4,7 +4,7 @@ $bg-grey: #f1f3f4;
 $lt-blue: #e4f1fe;
 
 $bg-lightly-shaded: $bg-grey;
-$bg-lightly-highlight: $lt-blue;
+$brand-btn-alt-bg: $lt-blue;
 $brand-alt-header-font: "Roboto Condensed";
 $brand-alt-header-weight: 700;
 // should be lighter than normal muted, cause it's bolded a bit and such
