--- a/app/assets/stylesheets/local/site-wide.scss
+++ b/app/assets/stylesheets/local/site-wide.scss
@@ -7,7 +7,7 @@
   // color, bg, border
   @include button-variant($btn-primary-color, $btn-primary-bg, $btn-primary-border);
   color: $text-color;
-  background-color: $bg-lightly-highlight;
+  background-color: $brand-btn-alt-bg;
   border-color: #ccc;
 }
 
