--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -1,7 +1,7 @@
 .work-show {
   padding: 0 15px;
 
-  .work-show-admin {
+  .show-admin {
     text-align: right;
     margin-bottom: $line-height-computed;
   }
@@ -14,18 +14,18 @@
   $thumb-horizontal-margin: 4px;
 
   @media (min-width: $screen-sm-min) {
-    .work-show-representative, .work-show-metadata, .work-show-title {
+    .show-representative, .show-metadata, .show-title {
       width: 50%;
       padding: 0 15px;
       display: inline-block;
     }
-    .work-show-representative {
+    .show-representative {
       float: left;
       padding-left: 0;
       padding-right: $column-gutter;
     }
 
-    .work-show-metadata, .work-show-title {
+    .show-metadata, .show-title {
       float: right;
       padding-right: 0;
     }
@@ -34,10 +34,10 @@
   @media (min-width: $max-image-column-breakpoint) {
     // some crazy CSS calc arithmatic to keep the main image and the thumbs under it
     // at $max-image-column, with still column break centered.
-    .work-show-representative {
+    .show-representative {
       width: $max-image-column;
     }
-    .work-show-title, .work-show-metadata {
+    .show-title, .show-metadata {
       width: calc(50% + (50% - #{$max-image-column}));
     }
 
@@ -53,12 +53,12 @@
     }
   }
 
-  .work-show-genre {
+  .show-genre {
     @extend %special-label;
     margin-bottom: 5px;
   }
 
-  .work-show-permission-badge {
+  .show-permission-badge {
     font-size: 16px;
     margin-bottom: 15px;
     .label {
@@ -66,7 +66,7 @@
     }
   }
 
-  .work-show-title {
+  .show-title {
     margin-bottom: $font-size-base;
   }
 
@@ -88,7 +88,7 @@
     }
   }
 
-  .work-show-date {
+  .show-date {
     ul {
       @extend .list-unstyled;
       margin-bottom: 0;
