--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -28,6 +28,7 @@ The underlying code in stack is a mess, so this override seems perhaps likely to
         <div class="show-genre">Collection</div>
         <h1><%= @presenter.title.first %></h1>
       </header>
+      <%= pluralize(@presenter.total_items, "Item") %>
     </div>
 
     <div class="show-representative">
@@ -36,7 +37,21 @@ The underlying code in stack is a mess, so this override seems perhaps likely to
 
     <div class="show-metadata">
       <%= render 'collection_description', presenter: @presenter %>
-      <%= render 'collections/show_descriptions' %>
+
+      <%# we handle metadata more like is done on work show page %>
+      <%# render 'collections/show_descriptions' %>
+
+      <table class="<%= dom_class(@presenter) %> chf-attributes">
+        <% @presenter.urls_to_catalog.each do |url| %>
+          <tr>
+            <td colspan="2"><%= link_to "View in library catalog", url %></td>
+          </tr>
+        <% end %>
+
+        <%= @presenter.attribute_to_html(:related_url, render_as: :chf_related_url) %>
+      </table>
+
+
     </div>
   </div>
 
