keep work show hero thumb from being too huge even when collapsed to no columns

--- a/app/assets/stylesheets/local/show.scss
+++ b/app/assets/stylesheets/local/show.scss
@@ -13,6 +13,14 @@
   $max-image-column-breakpoint: 1150px;
   $thumb-horizontal-margin: 4px;
 
+
+  .work-show-representative {
+    max-width: $max-image-column; // even when collapsed to no columns
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+
   @media (min-width: $screen-sm-min) {
     .work-show-representative, .work-show-metadata, .work-show-title {
       width: 50%;
