--- a/app/assets/stylesheets/local/work-show.scss
+++ b/app/assets/stylesheets/local/work-show.scss
@@ -1,6 +1,7 @@
+// Has some non-DRY things shared with collection-show.scss that could/should
+// be abstracted out into mixins or shared classes.
 
-
-.work-show, .collection-show {
+.work-show {
   padding: 0 15px;
 
   .show-admin {
@@ -14,31 +15,6 @@
   // this is the point the image column is 'naturally' 525px, any bigger it's 'naturally' bigger
   $max-image-column-breakpoint: 1150px;
   $thumb-horizontal-margin: 4px;
-
-  .chf-collection-search {
-    margin: ($line-height-computed * 2) 0;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    .chf-collection-search-title, .chf-collection-search-form {
-      flex-basis: 50%;
-      min-width: 400px;
-    }
-    .chf-collection-search-title {
-      @extend .h3;
-      margin: 0;
-      font-family: $brand-alt-header-font;
-      padding-right: $column-gutter;
-    }
-    form, .input-group {
-      margin: 0;
-    }
-  }
-
-  .collection-top {
-    margin-bottom: $line-height-computed * 2;
-  }
-
 
   @media (min-width: $screen-sm-min) {
     .show-representative, .show-metadata, .show-title {
@@ -171,48 +147,6 @@
     max-width: 565px; // more readable length for text at this font/size
   }
 
-
-
-  $attribute-cell-padding: 0.66em;
-  .chf-attributes {
-    @extend .table;
-    @extend .table-condensed;
-    width: 100%;
-    table-layout: fixed;
-    overflow: hidden;
-
-    & > tbody > tr:first-child  {
-      td, th {
-        border-top: 3px solid $table-border-color;
-      }
-    }
-
-    td, th {
-      vertical-align: baseline;
-      padding-top: $attribute-cell-padding;
-      padding-bottom: $attribute-cell-padding;
-    }
-    th {
-      font-weight: normal;
-      width: 33%;
-      padding-right: $attribute-cell-padding;
-    }
-    td {
-      width: 67%;
-    }
-    td ul {
-      padding-left: 0;
-      margin-bottom: 0;
-    }
-  }
-
-  .attribute-sub-head {
-    @extend .brand-alt-h3;
-    @extend .h3;
-    margin-top: $line-height-computed * 1.5;
-    margin-bottom: 0;
-    padding: $table-condensed-cell-padding;
-  }
 
   // An image with overlaid action buttons and metadata, used for
   // representative image and thumbs on show page. Internal overlay
