more customized expanded pagination

--- a/app/views/catalog/_results_pagination.html.erb
+++ b/app/views/catalog/_results_pagination.html.erb
@@ -4,7 +4,7 @@
     <%# expanded will be shown by CSS at large screen sizes, else compact %>
 
     <div class="pagination pagination-alt-expanded">
-      <%= paginate @response, :window => 2, :outer_window => 0, :theme => 'twitter-bootstrap-3' %>
+      <%= paginate @response, :window => 3, :outer_window => 1, :theme => 'local' %>
     </div>
 
     <div class="pagination pagination-alt-compact">
