--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -136,7 +136,7 @@ The underlying code in stack is a mess, so this override seems perhaps likely to
       <%# expanded will be shown by CSS at large screen sizes, else compact %>
 
       <div class="pagination pagination-alt-expanded">
-        <%= paginate @response, :window => 2, :outer_window => 0, :theme => 'twitter-bootstrap-3' %>
+        <%= paginate @response, :window => 3, :outer_window => 1, :theme => 'local' %>
       </div>
 
       <div class="pagination pagination-alt-compact">
