--- a/app/assets/stylesheets/local/collection-show.scss
+++ b/app/assets/stylesheets/local/collection-show.scss
@@ -43,7 +43,11 @@
 
   .chf-attributes {
     margin-left: -5px; // make the cell text line up with paragraphs above, hacky
-    max-width: ($max-readable-width / 0.66);
+    max-width: ($max-readable-width / 0.67);
+
+    // since our first row is a colspan=2, we need to turn off table-layout fixed,
+    // hacky, sorry.
+    table-layout: auto;
   }
 
   .chf-collection-search {
