--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -109,15 +109,16 @@ The underlying code in stack is a mess, so this override seems perhaps likely to
       <% if params[:action] == "edit" %>
         <%= render partial:'my/_index_partials/default_group', locals:{documents: @member_docs, docs:@member_docs} %>
       <% else %>
-        <%# this part we override to render our own thing instead of sufia's thing for individual
-             results. Used to be:  `render partial: 'show_document_list', locals:{documents: documents}`, which
-             would be: https://github.com/samvera/sufia/blob/v7.3.0/app/views/collections/_show_document_list.html.erb %>
+        <%# this part we override to render our own thing instead of sufia's thing for results on
+            collection page.
+            Used to be:  `render partial: 'show_document_list', locals:{documents: documents}`, which
+            would be: https://github.com/samvera/sufia/blob/v7.3.0/app/views/collections/_show_document_list.html.erb %>
         <ul class="list-unstyled collection-items">
-          <%# this assumes all members are GenericWorks suitable for rendering by this partial. Couldn't figure
-              out how to use Blacklight core stuff to choose the item-specific partial correctly. Sorry, fragile, yes.
-
-              TODO unacceptable, get it to look up properly somehow %>
-          <%= render partial: "curation_concerns/generic_works/generic_work", collection: @member_docs %>
+          <%# Don't entirely understand how this works to get the proper partial, but it does,
+              and should work for hetereogenous lists too. Basically taken from sufia
+              https://github.com/samvera/sufia/blob/v7.3.0/app/views/catalog/_document_list.html.erb
+           %>
+          <%= render @member_docs, as: :document %>
         </ul>
       <% end %>
     <% end %>
