--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -10,45 +10,49 @@ The underlying code in stack is a mess, so this override seems perhaps likely to
 
 <% provide :page_title, construct_page_title(@presenter.title) %>
 <div itemscope itemtype="http://schema.org/CollectionPage" class="collection-show">
+
   <div class="show-admin">
     <%= render 'collections/show_actions', presenter: @presenter %>
   </div>
 
-  <div class="collection-top clearfix">
+  <div class="collection-top">
+    <div class="collection-desc clearfix">
+      <div class="show-title">
+        <header>
+          <% if @presenter.needs_permission_badge? %>
+            <div class="show-permission-badge">
+              <%= @presenter.permission_badge %>
+            </div>
+          <% end %>
 
+          <div class="show-genre">Collection</div>
+          <h1><%= @presenter.title.first %></h1>
+        </header>
+      </div>
 
-    <div class="show-title">
-      <header>
-        <% if @presenter.needs_permission_badge? %>
-          <div class="show-permission-badge">
-            <%= @presenter.permission_badge %>
-          </div>
-        <% end %>
+      <div class="show-metadata">
+        <p class="show-item-count"><%= number_with_delimiter(@presenter.total_items) + ' item'.pluralize(@presenter.total_items) %></p>
 
-        <div class="show-genre">Collection</div>
-        <h1><%= @presenter.title.first %></h1>
-      </header>
+        <%= render 'collection_description', presenter: @presenter %>
+
+        <%# we handle metadata more like is done on work show page %>
+        <%# render 'collections/show_descriptions' %>
+
+        <table class="<%= dom_class(@presenter) %> chf-attributes">
+          <% @presenter.urls_to_catalog.each do |url| %>
+            <tr>
+              <td colspan="2"><%= link_to "View in library catalog", url %></td>
+            </tr>
+          <% end %>
+
+          <%= @presenter.attribute_to_html(:related_url, render_as: :chf_related_url) %>
+        </table>
+      </div>
+
     </div>
 
-    <div class="show-metadata">
-      <p class="show-item-count"><%= number_with_delimiter(@presenter.total_items) + ' item'.pluralize(@presenter.total_items) %></p>
-
-      <%= render 'collection_description', presenter: @presenter %>
-
-      <%# we handle metadata more like is done on work show page %>
-      <%# render 'collections/show_descriptions' %>
-
-      <table class="<%= dom_class(@presenter) %> chf-attributes">
-        <% @presenter.urls_to_catalog.each do |url| %>
-          <tr>
-            <td colspan="2"><%= link_to "View in library catalog", url %></td>
-          </tr>
-        <% end %>
-
-        <%= @presenter.attribute_to_html(:related_url, render_as: :chf_related_url) %>
-      </table>
-
-
+    <div class="collection-thumb">
+      <%= render 'collections/media_display', presenter: @presenter %>
     </div>
   </div>
 
