collections 'genre' is a link

--- a/app/views/collections/_collection.html.erb
+++ b/app/views/collections/_collection.html.erb
@@ -36,7 +36,7 @@ Didn't bother DRYing the template, just use common CSS classes %>
     <div class="chf-results-list-item-content">
 
       <div class="chf-results-list-item-genre">
-        <a href="/collections">Collections</a>
+        <%= link_to "Collections", collections_path %>
       </div>
 
 
