Featured Topics is the term

--- a/app/views/synthetic_category/show.html.erb
+++ b/app/views/synthetic_category/show.html.erb
@@ -11,7 +11,7 @@
     <div class="collection-desc clearfix">
       <div class="show-title">
         <header>
-          <div class="show-genre"><%= link_to "Features", root_path %></div>
+          <div class="show-genre"><%= link_to "Featured Topics", root_path %></div>
           <h1><%= synthetic_category.title %></h1>
         </header>
       </div>
