collection show search no wider than it needs to be

--- a/app/assets/stylesheets/local/collection-show.scss
+++ b/app/assets/stylesheets/local/collection-show.scss
@@ -76,6 +76,7 @@
     margin-bottom: $line-height-computed;
     padding: ($line-height-computed / 2);
     background-color: $bg-lightly-shaded;
+    display: inline-block;
 
     .chf-collection-search-title {
       @extend .h4, .brand-alt-h4;
